fix: adjusted padding and width to resolve overflow of codeblock-line-numbers

--- a/src/features/_markdown-code-block.scss
+++ b/src/features/_markdown-code-block.scss
@@ -1,4 +1,8 @@
 /* CODE BLOCK ELEMENT :: Adjustments */
+.markdown-source-view.mod-cm6 .cm-line.HyperMD-codeblock:not(.HyperMD-list-line) {
+  padding-inline-start: calc(var(--size-4-4) * 1.6);
+}
+
 body:not(.no-codeblock-line-numbers)
   .HyperMD-codeblock.cm-line:not(
     .HyperMD-codeblock-begin,
@@ -47,7 +51,7 @@ body:not(.no-codeblock-line-numbers)
   text-align: right;
   content: counter(codeblock-line-numbers);
   counter-increment: codeblock-line-numbers;
-  width: 1.15em;
+  width: 1.6em;
   height: 100%;
   padding-right: 1.4em;
   font-size: 0.75em;
